--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         nameInput.addEventListener('input', () => {
             if (nameInput.value.length < 3) {
-                nameLabel.classList.remove('success');
-                nameLabel.classList.add('error');
+                nameLabel.classList.remove('.success');
+                nameLabel.classList.add('.error');
             } else {
-                nameLabel.classList.remove('error');
-                nameLabel.classList.add('success');
+                nameLabel.classList.remove('.error');
+                nameLabel.classList.add('.success');
             }
         });
     </script>
